GeneralInfoForm, PersonalInfoForm, Validations, Breadcrumb Structure Added.
project dependecies versions decreased

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -67,21 +71,7 @@
   }
 }
 
-@media print {
-  #resumePreviewContent {
-    zoom: 1 !important;
-    padding: 0;
-  }
-}
 
-#resumePreviewContent {
-  font-family: Inter;
-}
-
-@page {
-  size: A4;
-  margin: 0.6cm;
-}
 
 @layer base {
   * {
